@@ -80,7 +80,6 @@ class CodonEvent
 		// Load each module and call the EventListen function
 		foreach(self::$listeners as $ModuleName => $Events)
 		{
-			echo $ModuleName;
 			$ModuleName = strtoupper($ModuleName);
 			global $$ModuleName;
 			
