@@ -2,7 +2,7 @@
 <p>Welcome to the registration form for <?php echo SITE_NAME; ?>. After you register, you will be notified by a staff member about your membership.</p>
 <form method="post" action="<?=SITE_URL?>/index.php/Registration">
 <dl>
-	<dt>First Name:</dt>
+	<dt>* First Name:</dt>
 	<dd><input type="text" name="firstname" value="<?=Vars::POST('firstname');?>" />
 		<?php
 			if($firstname_error == true)
@@ -10,7 +10,7 @@
 		?>
 	</dd>
 	
-	<dt>Last Name:</dt>
+	<dt>* Last Name:</dt>
 	<dd><input type="text" name="lastname" value="<?=Vars::POST('lastname');?>" />
 		<?php
 			if($lastname_error == true)
@@ -18,7 +18,7 @@
 		?>
 	</dd>
 	
-	<dt>Email Address</dt>
+	<dt>* Email Address</dt>
 	<dd><input type="text" name="email" value="<?=Vars::POST('email');?>" />
 		<?php
 			if($email_error == true)
@@ -26,7 +26,7 @@
 		?>
 	</dd>
 	
-	<dt>Select Airline</dt>
+	<dt>* Select Airline</dt>
 	<dd>
 		<select name="code" id="code">
 		<?php
@@ -38,7 +38,7 @@
 		</select>
 	</dd>
 	
-	<dt>Hub</dt>
+	<dt>* Hub</dt>
 	<dd>
 		<select name="hub" id="hub">
 		<?php
@@ -50,7 +50,7 @@
 		</select>
 	</dd>
 	
-	<dt>Location</dt>
+	<dt>* Location</dt>
 	<dd><input type="text" name="location" value="<?=Vars::POST('location');?>" />
 		<?php
 			if($location_error == true)
@@ -58,10 +58,10 @@
 		?>
 	</dd>
 	
-	<dt>Password</dt>
+	<dt>* Password</dt>
 	<dd><input id="password" type="password" name="password1" value="" /></dd>
 	
-	<dt>Enter your password again</dt>
+	<dt>* Enter your password again</dt>
 	<dd><input type="password" name="password2" value="" />
 		<?php
 			if($password_error != '')
@@ -79,6 +79,6 @@
 	<dt></dt>
 	<dd><p>By clicking register, you're agreeing to the terms and conditions</p></dd>
 	<dt></dt>
-	<dd><input type="submit" name="submit_register" value="Register!" /></dd>
+	<dd><input type="submit" name="submit" value="Register!" /></dd>
 </dl>
 </form>
